# pdfbot

./: .gitignore  .lagoon.yml  Dockerfile  README.md  docker-compose.yml  llmbots.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
confluencebot/: Dockerfile  app.py  confluence_qa.py  pyproject.toml
confluencebot/chroma_db/: chroma-collections.parquet  chroma-embeddings.parquet
confluencebot/chroma_db/index/: id_to_uuid_ab5bed28-e2d2-4eee-97be-855224d6811a.pkl  index_metadata_ab5bed28-e2d2-4eee-97be-855224d6811a.pkl  uuid_to_id_ab5bed28-e2d2-4eee-97be-855224d6811a.pkl
pdfbot/: Dockerfile  app.py  pyproject.toml
pdfbot/.streamlit/: config.toml
pdfbot/tests/: test_app.py
summarizebot/: summarize_app.py
tests/: test_app.py
